Added -Wall to g++ showing all warnings, made changes to fix those warnings, navn now seems to run better as a result

--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,7 @@ Made small code changes due to the SendMessage fix
 Updated some of Da_Goat's info
 Updated versions, names, etc. for next release
 Changed Module handler commands from a channel prefix command to a /msg command
+Fixed socket engine not printing buffer correctly in debug output
 
 Navn 2.0.0
 ==========
