--- a/TODO
+++ b/TODO
@@ -7,26 +7,27 @@ Legend:
 
 Navn 2.0.1
 ----------
-[ ] Fix --help message showing full execution directory
+[?] Fix --help message showing full execution directory
 [ ] Rewrite the config system (Burn INIreader with fire!)
-[ ] Multithread timer function
+[ ] timer function
 [ ] Add python support
 [$] Make module system load binary files (.so files)
 [+] Add some kind of command handler so it can list all loaded commands from all modules
 [+] Make default channel's in the config
-[ ] Make a server numeric catcher
+[+] Make a server numeric catcher
 [ ] Add timed pinging (should handle ping timeouts and connection issues)
 [ ] Add better error handling instead of a throw or a error code in some places
-[ ] Add OnJoin, OnKick, OnKill, OnNick, etc to a class and make use of it in modules
-[ ] Add some sort of buffer processor for the socket engine (make lines process correctly instead of printing the raw buffer)
+[+] Add OnJoin, OnKick, OnKill, OnNick, etc to a class and make use of it in modules
+[x] Add some sort of buffer processor for the socket engine (make lines process correctly instead of printing the raw buffer)
 
 
-
+Navn 2.0.2
+----------
+[ ] Multisocket the socket engine
 
 Future
 ------
 [ ] Add some sort of accounts system
-[ ] Rewrite socket engine again for multi-socket support
 [ ] make a makefile compile script that is still as colorful as build.sh
 [ ] Do away with the damn flux_net_irc namespace
 [ ] Add support for GETTEXT so it allows for the program to be translated
