Fixed a segmentation fault in reply->isnumeric, added the beginning of a oper commands class, worked on FOREACH_MOD macro

--- a/CHANGES
+++ b/CHANGES
@@ -9,6 +9,10 @@ Updated some of Da_Goat's info
 Updated versions, names, etc. for next release
 Changed Module handler commands from a channel prefix command to a /msg command
 Fixed socket engine not printing buffer correctly in debug output
+Made socket engine non-blocking, this fixes lots of broken stuff
+Made SendMessage *Send a global include, now modules can use Send-> without needing to include SendMessage in the void
+Made timed ping function, fixing ping-timeout issues
+Fixed version string having a 'v' in it
 
 Navn 2.0.0
 ==========
@@ -46,9 +50,7 @@ Fixed /msg topic not correctly setting topic
 Fixed xmlToString not reading the xml temp file
 Added error handling to findInXML and to the modules that use it (clock and weather)
 Cleaned up clock and weather modules
-Made socket engine non-blocking, this fixes lots of broken stuff
-Made SendMessage *Send a global include, now modules can use Send-> without needing to include SendMessage in the void
-Made timed ping function, fixing ping-timeout issues
+
 
 Navn 1.4.3
 ==========
