--- a/TODO
+++ b/TODO
@@ -10,12 +10,11 @@ Navn 2.0.1
 [?] Fix --help message showing full execution directory
 [ ] Rewrite the config system (Burn INIreader with fire!)
 [ ] timer function
-[ ] Add python support
 [$] Make module system load binary files (.so files)
 [+] Add some kind of command handler so it can list all loaded commands from all modules
 [+] Make default channel's in the config
 [+] Make a server numeric catcher
-[ ] Add timed pinging (should handle ping timeouts and connection issues)
+[$] Add timed pinging (should handle ping timeouts and connection issues)
 [ ] Add better error handling instead of a throw or a error code in some places
 [+] Add OnJoin, OnKick, OnKill, OnNick, etc to a class and make use of it in modules
 [x] Add some sort of buffer processor for the socket engine (make lines process correctly instead of printing the raw buffer)
@@ -32,3 +31,4 @@ Future
 [ ] Do away with the damn flux_net_irc namespace
 [ ] Add support for GETTEXT so it allows for the program to be translated
 [ ] Add Windows support (Fearure request: http://flux-net.net/bugs/view.php?id=9)
+[ ] Add python support
