Fixed system.h not responding to commands, Fixed kick-rejoin, Fixed extra debug from last commit, added source.params to commandsource for command params

--- a/CHANGES
+++ b/CHANGES
@@ -28,6 +28,7 @@ Added new message parsing system that uses vectors
 Added new CommandSource structure
 Processed modules a little differently
 Deprecated irc_string class as it works inefficiently
+Added select(), this fixes a MASSIVE CPU leak
 
 
 Navn 2.0.0
