--- a/TODO
+++ b/TODO
@@ -13,12 +13,12 @@ Navn 2.0.1
 [$] Make module system load binary files (.so files)
 [+] Add some kind of command handler so it can list all loaded commands from all modules
 [+] Make default channel's in the config
-[+] Make a server numeric catcher
+[x] Make a server numeric catcher
 [x] Add timed pinging (should handle ping timeouts and connection issues)
 [+] Add better error handling instead of a throw or a error code in some places
 [+] Add OnJoin, OnKick, OnKill, OnNick, etc to a class and make use of it in modules
 [x] Add some sort of buffer processor for the socket engine (make lines process correctly instead of printing the raw buffer)
-[ ] Add Select() multiplexing to stop high cpu usage
+[x] Add Select() multiplexing to stop high cpu usage
 
 
 Navn 2.0.2
