Removed unick, chan, ident, host, msg, rply, etc. from global variables as they are no longer needed and caused more problems than they solved, also made the command class compile when a command is made with that class, added the bare beginnings of the channel class, changed source.u to the User class instead of a string, made the variable nick global, many other changes

--- a/CHANGES
+++ b/CHANGES
@@ -39,6 +39,9 @@ Updated all modules with new api
 Removed 'cum' reply
 Added Command class, renamed conflicting Command class to Commands
 Added AddCommand and DelCommand into module class
+Removed unick, chan, ident, host, msg, rply as they caused more issues than they solved
+Added channel class
+Added module->AddCommand(Command*) and module->DelCommand(Command*) to module class
 
 
 Navn 2.0.0
