Added more logging, replaced printf's and std::cout's with log, fixed crash in encyclopedia module, fixed crash in channel logger module, removed other ctcp log stuff as there is 1 ctcp logger

--- a/CHANGES
+++ b/CHANGES
@@ -53,6 +53,7 @@ Added case insensitivity
 Added encyclopedia.h witch adds the command !encyclopedia
 Fixed socket engine using select as a timer instead of a multiplexer
 Added User::IsOwner boolean
+Added new logging function
 
 Navn 2.0.0
 ==========
