Added credits for authors

--- a/README
+++ b/README
@@ -13,8 +13,9 @@ System support: Linux/Unix i386 (x86)
 How to Install:
 1. Extract the source with unzip on linux.
 2. Make sure you have updated Gpp and G++ to latest versions or have build-essentials installed.
-3. Run build.sh or make
-4. To start the bot run ./navn
+3. run ./configure
+4. Run make
+5. To start the bot run ./navn
 
 How to start in developer mode
 1. Follow above instructions.
