--- a/ChangeLog
+++ b/ChangeLog
@@ -55,6 +55,7 @@ Fixed socket engine using select as a timer instead of a multiplexer
 Added User::IsOwner boolean
 Added new logging function
 Added a new compile system (GNU make) so navn can compile files correctly
+Rewrote the INIReader into C++ so now it is more effecent at its job
 
 Navn 2.0.0
 ==========
