--- a/ChangeLog
+++ b/ChangeLog
@@ -56,6 +56,8 @@ Added User::IsOwner boolean
 Added new logging function
 Added a new compile system (GNU make) so navn can compile files correctly
 Rewrote the INIReader into C++ so now it is more effecent at its job
+Removed Make_two_digits as i (justasic) have no clue what it does and its not used anywhere
+Deprecated irc_string::isolate() as its been replaced by the global function isolate() which does the same thing
 
 Navn 2.0.0
 ==========
