--- a/TODO
+++ b/TODO
@@ -10,13 +10,14 @@ Navn 2.0.1
 [x] Fix --help message showing full execution directory
 [x] Rewrite the config system (Burn INIreader with fire!)
 [x] timer function
-[+] Make module system load binary files (.so files)
-[+] Add some kind of command handler so it can list all loaded commands from all modules
+[x] Make module system load binary files (.so files)
+  [?] Add OnJoin, OnKick, OnKill, OnNick, etc to a class and make use of it in modules
+  [x] Add some kind of command handler so it can list all loaded commands from all modules
+
 [+] Make default channel's in the config
 [x] Make a server numeric catcher
 [x] Add timed pinging (should handle ping timeouts and connection issues)
 [x] Add better error handling instead of a throw or a error code in some places
-[+] Add OnJoin, OnKick, OnKill, OnNick, etc to a class and make use of it in modules
 [x] Add some sort of buffer processor for the socket engine (make lines process correctly instead of printing the raw buffer)
 [x] Add Select() multiplexing to stop high cpu usage
 
