converted dns module, changed some file modes, removed crap code

--- a/TODO
+++ b/TODO
@@ -11,7 +11,7 @@ Navn 2.0.1
 [x] Rewrite the config system (Burn INIreader with fire!)
 [x] timer function
 [x] Make module system load binary files (.so files)
-  [?] Add OnJoin, OnKick, OnKill, OnNick, etc to a class and make use of it in modules
+  [x] Add OnJoin, OnKick, OnKill, OnNick, etc to a class and make use of it in modules
   [x] Add some kind of command handler so it can list all loaded commands from all modules
 
 [+] Make default channel's in the config
