--- a/ChangeLog
+++ b/ChangeLog
@@ -58,7 +58,8 @@ Added a new compile system (GNU make) so navn can compile files correctly
 Rewrote the INIReader into C++ so now it is more effecent at its job
 Removed Make_two_digits as i (justasic) have no clue what it does and its not used anywhere
 Deprecated irc_string::isolate() as its been replaced by the global function isolate() which does the same thing
-Added Shared Object (.so) Modules
+Added Shared Object (.so) Modules, Converted modules to conform to such functions
+Rewrote the socket engine to clean up slop code
 
 Navn 2.0.0
 ==========
@@ -261,7 +262,7 @@ Finished up Signal Handler
 Navn 1.0 (known as C++ time bot)
 ================================
 (initial commit: http://code.google.com/p/flux-net/source/detail?r=24)
-Lordofsraam built module system and main structure
+Lordofsraam built main structure
 Lordofsraam added !time function
 Added !quit and !rejoin
 Changed how build script ran
