updated encyclopedia module, LORDOFSRAAM I SWEAR I DIDNT BREAK ANYTHING!

--- a/ChangeLog
+++ b/ChangeLog
@@ -59,7 +59,8 @@ Rewrote the INIReader into C++ so now it is more effecent at its job
 Removed Make_two_digits as i (justasic) have no clue what it does and its not used anywhere
 Deprecated irc_string::isolate() as its been replaced by the global function isolate() which does the same thing
 Added Shared Object (.so) Modules, Converted modules to conform to such functions
-Rewrote the socket engine to clean up slop code
+Rewrote the socket engine to clean up slop code, this removes std::queue from the socket engine
+Moved MANY config values to a new (but may not stay) config system for navn.
 
 Navn 2.0.0
 ==========
