Removed old system.h and world_clock.h modules, also removed tinyurl module as i will never finish it.

--- a/ChangeLog
+++ b/ChangeLog
@@ -61,6 +61,7 @@ Deprecated irc_string::isolate() as its been replaced by the global function iso
 Added Shared Object (.so) Modules, Converted modules to conform to such functions
 Rewrote the socket engine to clean up slop code, this removes std::queue from the socket engine
 Moved MANY config values to a new (but may not stay) config system for navn.
+Added Command class for channel commands such as !rename, these commands are literal
 
 Navn 2.0.0
 ==========
