Partly fixed config reader not printing line numbers, Fixed Segfault causing a 10,000 lines and being almost not exitable (SIGABRT saved the day).. Segfault handler now handles segfaults correctly

--- a/ChangeLog
+++ b/ChangeLog
@@ -84,6 +84,8 @@ Commands can now have the number of params specified.. if they're are too many t
 Added Multi-Line comments to config
 Fixed x64 builds
 Added automake module detector
+Added what should be a Segmentation Fault handler
+Fixed Command Line arguements not working correctly
 
 Navn 2.0.0
 ==========
