--- a/TODO
+++ b/TODO
@@ -9,12 +9,15 @@ Navn 2.0.1
 ----------
 [x] Fix --help message showing full execution directory
 [x] Rewrite the config system (Burn INIreader with fire!)
+[x] Do away with the damn flux_net_irc namespace
 [x] timer function
+[x] Case Insensitivity
 [x] Make module system load binary files (.so files)
   [x] Add OnJoin, OnKick, OnKill, OnNick, etc to a class and make use of it in modules
   [x] Add some kind of command handler so it can list all loaded commands from all modules
+  [+] Fix glibc crashes with this system
 
-[+] Make default channel's in the config
+[x] Make default channel's in the config
 [x] Make a server numeric catcher
 [x] Add timed pinging (should handle ping timeouts and connection issues)
 [x] Add better error handling instead of a throw or a error code in some places
@@ -25,15 +28,34 @@ Navn 2.0.1
 Navn 2.0.2
 ----------
 [ ] Multisocket the socket engine
+  [ ] Multi-Network handling
+  [ ] Possible webserver type module for stats, etc.
+
+[ ] Add Mode Handler
+  [ ] Parse 005 Numeric for modes and server support stuff, take action on it
+
+[ ] Add Ban Manager
+[ ] Add Database/User accounts type system for metadata
+  [ ] Add IDENTIFY type command
+  [ ] Add Bot Administrators
+  [ ] Add E-Mail handling
+  [ ] Add Message handling (ie. memo's')
+  [ ] Add Op status management
+  [ ] Add Mode Locks
+  [ ] Add Greetings
+  [ ] Add lists of networks, channels, etc.
+  [ ] Add information on those users (what chans are they op in? are they an IRCop? etc.)
+
+[ ] Add more event handlers (FOREACH_MOD)
+[ ] Better config format
+[ ] Add Oper Protocol modules
+[ ] Better terminal Commands Parsing
 [ ] Add a flags system like channel/user modes
-[ ] Parse 005 Numeric for modes and server support stuff, take action on it
+
 
 Future
 ------
-[ ] User Account system
-[x] Case Insensitivity
-[+] make a makefile compile script that is still as colorful as build.sh
-[x] Do away with the damn flux_net_irc namespace
+[ ] Move to CMake
 [ ] Add support for GETTEXT so it allows for the program to be translated
 [ ] Add Windows support (Fearure request: http://flux-net.net/bugs/view.php?id=9)
 [ ] Add python support
