Updated some compiler crap, also made it so if there is no module directory or the directory does not contain a *.cpp it will skip module generation

--- a/ChangeLog
+++ b/ChangeLog
@@ -39,7 +39,7 @@ Removed 'cum' reply
 Added Command class, renamed conflicting Command class to Commands
 Added AddCommand and DelCommand into module class
 Removed unick, chan, ident, host, msg, rply as they caused more issues than they solved
-Added channel class
+Added channel and user classes
 Added module->AddCommand(Command*) and module->DelCommand(Command*) to module class
 Removed shutdown as it was broken and didnt work right, also crashed the bot if used incorrectly for whatever reason
 Added Channel class, this allows for messages to be sent to the channel and channel management
