Added INIReader::GetBoolean(), Added ability for user to specify the amount of time it takes for the socket engine to process, it is recommended this value is not zero, removed log message from BotConf class

--- a/ChangeLog
+++ b/ChangeLog
@@ -93,6 +93,8 @@ Flux::Sanitize now stirps IRC color codes and color code numbers from strings
 Added Clock class
 Added a PVP game
 Strip terminal colors from the logs, added --nocolor to command line args
+Added INIReader::GetBoolean()
+Added "Socket Timeout" into config, this sets the amount of time for the socket to process
  
 
 Navn 2.0.0
