Fixed lordofsraams compile errors as he always forgets to use unsigned integers in for loops, fixed most of da_goat's !poke, log needs to be corrected and so does Send->action, also removed Send->raw

--- a/ChangeLog
+++ b/ChangeLog
@@ -133,6 +133,7 @@ Fixed /msg topic not correctly setting topic
 Fixed xmlToString not reading the xml temp file
 Added error handling to findInXML and to the modules that use it (clock and weather)
 Cleaned up clock and weather modules
+Added Flux::string which is based on std::string
 ----------
 
 Navn 1.4.3
