Added the ability for the socket engine to throw exceptions from external functions (in ping timeout cases for example), also added OnPing() which fixes Undernet connections for the most part (as long as m_ping is loaded).. since navn cant seem to handle pings through OnCommand()

--- a/TODO
+++ b/TODO
@@ -51,6 +51,7 @@ Navn 2.0.2
 
 [ ] Add more event handlers (FOREACH_MOD)
 [ ] Add calculator
+[ ] Add buffer limiter (so freenode does not kill the bot)
 [ ] Better config format
 [ ] Better startup switch management
 [ ] Add Oper Protocol modules
