Fixed FindCommand not finding the commands correctly, added the return chars to the Oper class, converted weather module to use lordofsraams new XMLFile parser.. this should make reading the xml file more accurate and provide more data on your weather

--- a/ChangeLog
+++ b/ChangeLog
@@ -112,6 +112,9 @@ Added Flux::string.insert()
 Added the following to Flux::string: compare(), max_size(), swap(), and get_allocator()
 Added an enum for commands to tell the difference between channel and private message commands
 Removed FindChanCommand()
+Corrected Oper class not having return characters
+Fixed FindCommand not using its types correctly
+
 
 Navn 2.0.0
 ==========
