--- a/ChangeLog
+++ b/ChangeLog
@@ -115,6 +115,7 @@ Removed FindChanCommand()
 Corrected Oper class not having return characters
 Fixed FindCommand not using its types correctly
 Merged SendMessage and Commands classes into 1 IRCProto class
+Removed old psudo-xmlparser and converted world_clock module
 
 
 Navn 2.0.0
