--- a/ChangeLog
+++ b/ChangeLog
@@ -116,6 +116,8 @@ Corrected Oper class not having return characters
 Fixed FindCommand not using its types correctly
 Merged SendMessage and Commands classes into 1 IRCProto class
 Removed old psudo-xmlparser and converted world_clock module
+Added support for C++11
+Added isalphibetic and isalphibeticnum, forks of isvalidnick
 
 
 Navn 2.0.0
